--- a/h2o-bindings/build.gradle
+++ b/h2o-bindings/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'java'
 // Common constants
 def runner = new File("$rootDir/scripts/run.py").canonicalPath
 def binDir = file("bin")
-def srcGenBindingsDir = file("src-gen/main")
+def srcGenBindingsDir = file("src-gen/main") // TODO: this setting is not properly passed to gen_all.py
 
 // Configuration for code generator
 configurations {
@@ -47,45 +47,8 @@ jar {
 
 task runGenerateRESTAPIBindingsSrc(type: Exec) {
     workingDir binDir
-
-    // Note: by default the generated sources get written to ./build/src-gen/java/main
-    commandLine 'python', runner, 
-                '--wipeall', 
-                '--baseport', '48000', 
-                '--numclouds', '1', 
-                '--jvm.xmx', '4g', 
-                '--test', "gen_java.py"
-
-}
-
-task runGenerateRESTAPICSharpBindingsSrc(type: Exec) {
-    workingDir binDir
-    commandLine 'python', runner,
-            '--wipeall',
-            '--baseport', '48000',
-            '--numclouds', '1',
-            '--jvm.xmx', '4g',
-            '--test', "gen_csharp.py"
-}
-
-task runGenerateRESTAPIThriftBindingsSrc(type: Exec) {
-    workingDir binDir
-    commandLine 'python', runner,
-            '--wipeall',
-            '--baseport', '48000',
-            '--numclouds', '1',
-            '--jvm.xmx', '4g',
-            '--test', "gen_thrift.py"
-}
-
-task runGenerateRESTAPIPythonBindingsSrc(type: Exec) {
-    workingDir binDir
-    commandLine 'python', runner,
-            '--wipeall',
-            '--baseport', '48000',
-            '--numclouds', '1',
-            '--jvm.xmx', '4g',
-            '--test', "gen_python.py"
+    // Note: by default the generated sources get written to ./h2o-bindings/src-gen/*
+    commandLine 'python', "gen_all.py"
 }
 
 task cleanGenerateRESTAPIBindings(type: Delete) {
